Bug 941324 - Don't send touch input on chrome elements to APZC [r=jimm]